# onion.network

./: build.gradle  fix-alignment.py  gradle.properties  settings.gradle
APTDispatchLibrary/: build.gradle
APTDispatchLibrary-MeekObfs4-Full/: build.gradle
APTDispatchLibrary/src/main/: AndroidManifest.xml
TorBuildScript/: README.md
app/: build.gradle  proguard-rules.pro
app/src/headless/: AndroidManifest.xml
app/src/headless/java/onion/network/: AppHeadless.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: builtin-bridges.json
app/src/main/assets/dexopt/: baseline.prof  baseline.profm
app/src/main/cpp/: CMakeLists.txt  opus_codec.cpp  tor-native.cpp  tor-native.h
app/src/main/cpp/invizible/: util.c
app/src/main/java/onion/network/: App.java  ChatBot.java  ChatClient.java  ChatDatabase.java  ChatServer.java  ConversationPage.java  Ed25519Signature.java  FriendPage.java  FriendTool.java  HostService.java  HttpClient.java  Item.java  ItemTask.java  MainActivity.java  NativeLoader.java  Notifier.java  OnBootReceiver.java  ProfilePage.java  QR.java  RequestTool.java  Server.java  SettingsActivity.java  Site.java  SplashActivity.java  StatusTool.java  Tor.java  TorManager.java  TorSocket.java  TorStatusView.java  UpdateScheduler.java  Utils.java  WallBot.java  WallPage.java
app/src/main/java/onion/network/call/: CallManager.java  CallServer.java  CallSession.java  CallSignalMessage.java  CallSocket.java  CallState.java  TcpCallSession.java
app/src/main/java/onion/network/cashes/: ItemCache.java  SiteCache.java
app/src/main/java/onion/network/clients/: ChatClient.java  HttpClient.java  TorSocket.java
app/src/main/java/onion/network/databases/: ChatDatabase.java  ItemDatabase.java  RequestDatabase.java
app/src/main/java/onion/network/helpers/: AudioCacheManager.java  AuthorProfileCache.java  BitmapHelper.java  ChatMediaStore.java  Const.java  DeepLinkParser.java  DialogHelper.java  Ed25519Signature.java  ItemDisplayHelper.java  MediaResolver.java  MediaUploadClient.java  NetworkUtils.java  OnionUrlBuilder.java  PermissionHelper.java  StreamMediaStore.java  ThemeManager.java  TorBridgeParser.java  TorStatusFormatter.java  UiCustomizationManager.java  Utils.java  VideoCacheManager.java
app/src/main/java/onion/network/models/: AgentLoop.java  AuthorProfile.java  Blog.java  ChatBot.java  ChatMessagePayload.java  FriendPreview.java  FriendTool.java  Item.java  ItemResult.java  ItemTask.java  MemoryStream.java  Notifier.java  PostAssets.java  PostDraft.java  QR.java  Request.java  Response.java  Site.java  VoiceAgent.java  VoiceCommandHandler.java  VoskSttEngine.java  WallBot.java
app/src/main/java/onion/network/pages/: BasePage.java  BlogPage.java  ChatPage.java  CloudPage.java  ConversationPage.java  FriendPage.java  InfoPage.java  PrivacyPage.java  ProfilePage.java  RequestPage.java  WallPage.java
app/src/main/java/onion/network/servers/: BlogServer.java  ChatServer.java  HttpServer.java  Server.java
app/src/main/java/onion/network/services/: HostService.java  OnBootReceiver.java  UpdateScheduler.java  VideoCaptureService.java
app/src/main/java/onion/network/settings/: EditTextPreferenceEx.java  EditTextPreferenceUrl.java  ListPreferenceEx.java  Settings.java
app/src/main/java/onion/network/tor/: BridgeChecker.java  BridgeDbClient.java  (+4 more)
app/src/main/jniLibs/: build  build-opus.sh
app/src/main/res/: CMakeLists.txt
app/src/main/res/drawable/: baseline_account_circle_24.xml  button_style.xml  chat_item_background.xml  chat_my_item_background.xml  edit_rounded_background.xml  empty_icon.xml  frosted_card_dark.xml  frosted_card_light.xml  frosted_card_monochrome_black.xml  frosted_card_monochrome_light.xml  glass_chip_circle.xml  glass_input_background.xml  glass_pill.xml  ic_add.xml  ic_add_a_photo_black_36dp.xml  ic_assignment_ind.xml  ic_call.xml  ic_call_end.xml  ic_call_made.xml  ic_call_received.xml  ic_check.xml  ic_close.xml  ic_comments.xml  ic_delete.xml  ic_edit.xml  ic_edit_neon.xml  ic_folder.xml  ic_format_list_bulleted.xml  ic_group_add.xml  ic_image.xml  ic_insert_photo_white_24dp.xml  ic_like.xml  ic_link_black.xml  ic_menu.xml  ic_menu_neon.xml  ic_mic.xml  ic_pause.xml  ic_people.xml  ic_person_add.xml  ic_person_add_neon.xml  (+21 more)
app/src/main/res/drawable-anydpi/: ic_notification.xml  ic_stat_name.xml
app/src/main/res/layout/: activity_call.xml  activity_main.xml  activity_post.xml  activity_splash.xml  blog_page.xml  chat_item.xml  chat_page.xml  cloud_page.xml  contact_dialog.xml  conversation_item.xml  conversation_page.xml  dialog_bridge_captcha.xml  dialog_list_item.xml  dialog_share.xml  dialog_single_choice_item.xml  dialog_single_item.xml  dialog_title.xml  fragment_main.xml  friend_dialog.xml  friend_empty.xml  friend_item.xml  friend_more.xml  friend_page.xml  info_page.xml  prefs.xml  profile_dialog.xml  profile_item.xml  profile_page.xml  profile_photo_dialog.xml  request_item.xml  request_page.xml  status_bar.xml  status_bar_top.xml  status_load.xml  status_offline.xml  tab_item.xml  url_dialog.xml  wall_dialog.xml  wall_empty.xml  wall_friend_preview_item.xml  (+3 more)
app/src/main/res/menu/: menu_main.xml  menu_post.xml  prefs.xml
app/src/main/res/raw/: blog_page.htm
app/src/main/res/values/: attrs.xml  attrs_extra_for_theme.xml  colors.xml  dimen.xml  strings.xml  styles.xml
app/src/main/res/values-w1024dp/: dimen.xml
app/src/main/res/values-w600dp/: dimen.xml
app/src/main/res/values-w720dp/: dimen.xml
app/src/main/res/values-w960dp/: dimen.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml  prefs.xml  theme_prefs.xml
app/src/test/java/onion/network/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opus-build/: CMakeLists.txt
opus-build/build-arm64-v8a/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  opus.pc
opus-build/build-armeabi-v7a/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  config.h
opus-build/build-armeabi-v7a/opus/: Makefile  cmake_install.cmake
(+35 files in other folders)
